Version 2.1.148
    Alchemy progression is now more reasonable (delete skillranks.yml or edit it yourself to receive the change)

    NOTES:
    Alchemy now progresses much smoother, with rank 2 no longer unlocking right away. Thanks to Momshroom for pointing out this oddity.

Version 2.1.147
    Fixed a bug where players below the level threshold on a hardcore mode enabled server would gain levels on death in certain circumstances

Version 2.1.146
    A bug where players would disconnect from mcMMO messages has been fixed (thanks kashike / read notes)
        It should be noted this was NOT an mcMMO bug, but a bug within Spigot since Spigot 1.16
    A dupe exploit has been fixed
    Improvements were made to tracking player placed blocks in mcMMO
    Players no longer lose levels below the level threshold in hardcore mode
    Hardcore now only applies penalties to levels above threshold

    NOTES:
    Shout out to Kashike
    Kashike is a developer on the mcMMO team, however after I recruited him had a lot of life stuff come at him and has./tn't had a chance to contribute until now!

    JSON is used by Minecraft for a lot of stuff, in this case the JSON mcMMO made use of was related to displaying text in chat or displaying text on the clients screen in other places such as the action bar, there's been a bad bug in Spigot since 1.16 that would disconnect players some of the time when sending JSON components.
    mcMMO makes heavy use of these components, so since spigot has yet to fix the bug I decided we needed a work around for the time being.
    The library named 'adventure' is developed by the Kyori organization, which is Kashike's baby.
    Kashike is a very talented and skilled developer and he did the work on this patch to solve this issue.

    This is a link to an bug report I did on this bug on Spigot's issue tracker, it is my understanding they have yet to find a way to reliably reproduce this bug.